Handled Date picker

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@heroicons/react": "^2.1.5",
         "apexcharts": "^3.54.1",
         "react-apexcharts": "^1.4.1",
+        "react-date-range": "^2.0.1",
+        "react-tailwindcss-datepicker": "^1.7.2",
         "react-toastify": "^10.0.6",
         "reapop": "^4.2.2"
     }
