--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "spatie/laravel-permission": "^6.9",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "utyemma/laranotice": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
