--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "apexcharts": "^3.54.1",
         "datatables.net-dt": "^2.1.8",
         "datatables.net-react": "^1.0.0",
+        "fslightbox-react": "^1.8.0",
         "lodash": "^4.17.21",
         "react-apexcharts": "^1.4.1",
         "react-date-range": "^2.0.1",
