--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "beganovich/snappdf": "^5.0",
         "cloudinary-labs/cloudinary-laravel": "^2.2",
         "flowframe/laravel-trend": "^0.3.0",
         "inertiajs/inertia-laravel": "^1.0",
